2012-08-17 Miguel de Dios <miguel.dedios@artica.es>
	
	*  include/functions_api.php: fixed the confused error messages when
	there is data events.

2012-08-16 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/gis_maps/ajax.php, operation/gis_maps/render_view.php,
	include/functions_gis.php, include/javascript/openlayers.pandora.js:
	added the feature to hidden the names of agents in the map, and
	when it is set the default icon in the setup and the agent haven't
	the icon, then this is show in the map.

2012-08-16  Sancho Lerena <slerena@artica.es>

	* include/functions_config.php,
	godmode/setup/setup_visuals.php: Support for hide label in GIS maps,
	and use by default an icon agent, instead group icons. 

	Setup is working, need code in javascript/GIS to implement it (miguel!).

2012-08-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Force the static graphs in the 
	last added function to api

2012-08-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Add the missed function api_get_graph_module_data
	and update it to work with last graph system

2012-08-06  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_config.php: Fixed that blank page is shown after
	login when update_manager is disabled.

2012-07-31  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Removed sql to update
	'tlocal_componet' table. It's an enterprise table.

2012-07-30  Hirofumi Kosaka  <kosaka@rworks.jp>

	* operation/reporting/graph_viewer.php: replace 'Period' with
	'Time range' to be translated. This is for consistency of
	labels between single graphs and custom graphs.

2012-07-26  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/module_manager_editor_common.php:
	'Disable' checkbox was not enabled when you unlinked modules
	from a policies.

	bug fix for enterprise version. 

2012-07-24 Miguel de Dios <miguel.dedios@artica.es>
	