@@ -1,3 +1,8 @@
+2012-08-21 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* operation/agentes/ver_agente.php: Added code to support new
+	RHEV enterprise extension.
+	
 2012-08-17 Miguel de Dios <miguel.dedios@artica.es>
 	
 	*  include/functions_api.php: fixed the confused error messages when
